# verus-proof-synthesis

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: README.md
benchmarks/CloverBench/unverified/: all_digits_strong.rs  array_append_strong.rs  array_concat_strong.rs  array_copy_strong.rs  array_product_strong.rs  array_sum_strong.rs  binary_search.rs  cal_div.rs  is_prime.rs  linear_search2.rs  two_sum.rs
benchmarks/CloverBench/verified/: all_digits_strong.rs  array_append_strong.rs  array_concat_strong.rs  array_copy_strong.rs  array_product_strong.rs  array_sum_strong.rs  binary_search.rs  cal_div.rs  (+3 more)
benchmarks/Diffy/: note
benchmarks/HumanEval/: note
benchmarks/MBPP/: note
benchmarks/Misc/: note
benchmarks/SVComp-Array-fpi/: note
code/: config.json  generation.py  houdini.py  infer.py  inter_generation.py  inter_main.py  lsp.py  lynette.py  main.py  new_result.csv  output.json  parse_errors.py  proof_action.py  proof_actions.csv  proof_actions.txt  refinement.py  result.csv  stats.py  test.rs  test_o.rs  utils.py  utils_inter.py  veval.py
code/lemmas/: seq_subrange_all.rs  seq_subrange_ascend.rs  seq_take_all.rs  seq_take_ascend.rs  vec_push.rs  vec_remove.rs
code/multilspy/: .gitignore
code/rust_src/: Cargo.toml
utils/lynette/source/lynette/: Cargo.toml
utils/lynette/source/lynette/src/: code.rs  deghost.rs  func.rs  main.rs  unimpl.rs  utils.rs
utils/lynette/source/lynette/src/merge/: exprs.rs  is_ghost.rs  merge.rs  mod.rs  types.rs  utils.rs
verus/: .vstd-fingerprint  cargo-verus  libbuiltin.rlib  version.txt
(+442 files in other folders)
